# aws-cost-analyzer

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  aws_cost_suite.py  cost-analysis  pyproject.toml  status.py
.github/workflows/: ci.yml
aws_cost_analyzer/: __init__.py  aws_client.py  cli.py  config.py  data_processor.py  interactive_visualizer.py  main.py  utils.py  visualizer.py
aws_cost_analyzer/analyzers/: __init__.py  anomaly.py  base.py  basic.py  forecast_accuracy.py  forecast_models.py  forecasting.py  recommendations.py  trending.py
data/: .gitkeep
outputs/: .gitkeep
