[project]
name = "aws-cost-analysis"
version = "1.0.0"
description = "AWS Cost Analysis Suite - Flexible time periods and comprehensive reporting"
authors = [
    {name = "Taylor Hall", email = "taylormichaelhall@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "matplotlib>=3.5.0",
    "numpy>=1.21.0",
    "scipy>=1.9.0",
    "boto3>=1.26.0",
    "python-dotenv>=1.0.0",
    "plotly>=5.18.0",
    "statsmodels>=0.14.0",
]

[project.scripts]
aws-cost-suite = "aws_cost_suite:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
    "pip-audit>=2.6.0",
]